--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "aos": "^3.0.0-beta.6",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "postcss": "^8.3.6"
+    "postcss": "^8.3.6",
+    "v-click-outside": "^3.1.2"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.1",
